# Desktop-Saver

./: .gitignore  CMakeLists.txt
src/: main.cpp  save_data.cpp  save_data.hpp  save_data.imp.hpp  util.cpp  util.hpp
